--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -11,7 +11,7 @@
     <h3>Your news ranker</h3>
 
 
-    <form action="/test2" method="get">
+    <form action="/news_rank" method="POST">
         아이디: <input type='text' name='id' size='10'><br>
         비밀번호: <input type='password' name='pw' size='10'><br>
         검색키워드: <input type="text" name="keyword" size="10"><br>
